--- a/mm/article.html
+++ b/mm/article.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="img/favicon.png">
         <title>Статья</title>
         <link rel="stylesheet" href="css/style.min.css" type="text/css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
     </head>
 <body>
     <header class="header hide">
@@ -192,7 +193,7 @@
                             <div class="footer__text">Если оставите свою почту, то раз в месяц смогу присылать дайджест - самое интересное из мира психологии.</div>
                             <form action="#">
                                 <input type="email" placeholder="E-mail для связи">
-                                <button class="btn btn_mini">Подписаться</button>
+                                <button class="btn btn_mini btn_black">Подписаться</button>
                             </form>
                         </div>
                     </div>
@@ -201,6 +202,7 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
