--- a/mm/consultation.html
+++ b/mm/consultation.html
@@ -63,27 +63,27 @@
                         <a href="#" class="services__item">
                             <div class="services__img"><img src="img/services-1.png" alt="#"></div>
                             <div class="services__icon"><img src="" alt="#"></div>
-                            <div class="services__subtitle">Самооценка, уверенность в себе</div>
+                            <div class="services__subtitle">Самооценка, <br> уверенность в себе</div>
                         </a>
                         <a href="#" class="services__item">
                             <div class="services__img"><img src="img/services-2.png" alt="#"></div>
                             <div class="services__icon"><img src="" alt="#"></div>
-                            <div class="services__subtitle">Ступор в жизни и карьере</div>
+                            <div class="services__subtitle">Ступор в жизни <br> и карьере</div>
                         </a>
                         <a href="#" class="services__item">
                             <div class="services__img"><img src="img/services-3.png" alt="#"></div>
                             <div class="services__icon"><img src="" alt="#"></div>
-                            <div class="services__subtitle">Потеря бизнеса, неудачи в карьере</div>
+                            <div class="services__subtitle">Потеря бизнеса, <br> неудачи в карьере</div>
                         </a>
                         <a href="#" class="services__item">
                             <div class="services__img"><img src="img/services-4.png" alt="#"></div>
                             <div class="services__icon"><img src="" alt="#"></div>
-                            <div class="services__subtitle">Эмоциональное выгорание</div>
+                            <div class="services__subtitle">Эмоциональное <br> выгорание</div>
                         </a>
                         <a href="#" class="services__item">
                             <div class="services__img"><img src="img/services-5.png" alt="#"></div>
                             <div class="services__icon"><img src="" alt="#"></div>
-                            <div class="services__subtitle">Экзистенциальные проблемы</div>
+                            <div class="services__subtitle">Экзистенциальные <br> проблемы</div>
                         </a>
                     </div>
                 </div>
@@ -164,24 +164,24 @@
                         </ul>
                     </div>
                     <div class="meet__item meet__item_big">
-                        <div class="meet__icon"><img src="img/exp_icon_1.svg" alt="#"></div>
+                        <div class="meet__icon"><img src="img/icons/exp_icon_1.svg" alt="#"></div>
                         <div class="meet__subtitle">Для чего нужна встреча-знакомство</div>
                         <div class="meet__text">Перед началом работы крайне важно посмотреть друг на друга, обсудить и сформулировать имеющиеся запросы, чтобы установить направление работы.
                             Также нужно соотнести ваши ожидания с реальными сроками.
                             А самое главное - вы услышите, что говорит ваш внутренний радар «свой-чужой». Комфортно ли вам со мной.</div>
                     </div>
                     <div class="meet__item">
-                        <div class="meet__icon"><img src="img/exp_icon_1.svg" alt="#"></div>
+                        <div class="meet__icon"><img src="img/icons/exp_icon_1.svg" alt="#"></div>
                         <div class="meet__subtitle">Pre-made Modules</div>
                         <div class="meet__text">Efficiently unleash cross-media information without cross-media value work.</div>
                     </div>
                     <div class="meet__item">
-                        <div class="meet__icon"><img src="img/exp_icon_1.svg" alt="#"></div>
+                        <div class="meet__icon"><img src="img/icons/exp_icon_1.svg" alt="#"></div>
                         <div class="meet__subtitle">Industry-specific Mobile Apps</div>
                         <div class="meet__text">Quickly maximize timely deliverables for real-time schemas customer service with ideas.</div>
                     </div>
                     <div class="meet__item">
-                        <div class="meet__icon"><img src="img/exp_icon_1.svg" alt="#"></div>
+                        <div class="meet__icon"><img src="img/icons/exp_icon_1.svg" alt="#"></div>
                         <div class="meet__subtitle">The Latest Tech</div>
                         <div class="meet__text">Dramatically maintain clicks-and-mortar for the solutions without functional solutions.</div>
                     </div>
