--- a/mm/index.html
+++ b/mm/index.html
@@ -76,22 +76,22 @@
                     </div>
                     <div class="exp__items">
                         <div class="exp__item">
-                            <div class="exp__icon"><img src="img/exp_icon_1.svg" alt="#"></div>
+                            <div class="exp__icon"><img src="img/icons/exp_icon_1.svg" alt="#"></div>
                             <div class="exp__subtitle">Высшее профильное образование</div>
                             <div class="exp__text">Диплом с отличием об окончании магистратуры Московского Института Психоанализа по направлению «Практическая психология и коучинг»</div>
                         </div>
                         <div class="exp__item">
-                            <div class="exp__icon"><img src="img/exp_icon_2.svg" alt="#"></div>
+                            <div class="exp__icon"><img src="img/icons/exp_icon_2.svg" alt="#"></div>
                             <div class="exp__subtitle">500+ часов практики</div>
                             <div class="exp__text">Очная и онлайн-практика в индивидуальном и групповом формате. Личная и профессиональная направленность.</div>
                         </div>
                         <div class="exp__item">
-                            <div class="exp__icon"><img src="img/exp_icon_3.svg" alt="#"></div>
+                            <div class="exp__icon"><img src="img/icons/exp_icon_3.svg" alt="#"></div>
                             <div class="exp__subtitle">Система знаний и методик</div>
                             <div class="exp__text">Работа в крупных компаниях: Canon, Pirelli, K. Bremse. Постоянное саморазвитие, освоение новых методик, использование современных технологий</div>
                         </div>
                         <div class="exp__item">
-                            <div class="exp__icon"><img src="img/exp_icon_4.svg" alt="#"></div>
+                            <div class="exp__icon"><img src="img/icons/exp_icon_4.svg" alt="#"></div>
                             <div class="exp__subtitle">10+ лет опыта ведения бизнеса</div>
                             <div class="exp__text">Собственный e-commerce проект, производство и сеть магазинов с ежегодной выручкой €500К+ <br> Вывод новой автомобильной марки на рынок ЕС</div>
                         </div>
@@ -140,7 +140,7 @@
                             <div class="biography__descr">
                                 <div class="biography__company">HOKO</div>
                                 <div class="biography__post">Hochschulkontaktmesse</div>
-                                <div class="biography__img"><img src="img/hoko.png" alt="#"></div>
+                                <div class="biography__img"><img src="img/biography-1.png" alt="#"></div>
                             </div>
                         </div>
                         <div class="biography__item">
@@ -172,7 +172,7 @@
                                 <div class="biography__descr">
                                     <div class="biography__company">Hochschule für angewandte Wissenschaften München</div>
                                     <div class="biography__post">Bachelor of Engineering</div>
-                                    <div class="biography__img"><img src="img/boigraphy-2.png" alt="#"></div>
+                                    <div class="biography__img"><img src="img/biography-2.png" alt="#"></div>
                                 </div>
                             </div>
                         </div>
